--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           <img src="./p.jpg" class="card-img" />
           <div class="card-info">
             <div class="card-title-date">
-              <h2>Biscoitos Paupérios</h2>
+              <h2>Biscoitos Paupério</h2>
               <p>25/07/2023</p>
             </div>
             <div class="card-person">
