--- a/index.html
+++ b/index.html
@@ -4,12 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Terças-Feiras Doces</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./imgs/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./imgs/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./imgs/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./imgs/site.webmanifest" />
+    <meta name="msapplication-TileColor" content="#ec85b5" />
+    <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="main">
       <div class="logo">
-        <img src="./Logo.svg" />
+        <img src="./imgs/doceLogo.svg" />
       </div>
 
       <div class="entries"></div>
@@ -32,7 +52,7 @@
           <input type="text" id="author" required />
         </div>
 
-        <button type="submit">Add Entry</button>
+        <button type="submit">Adicionar</button>
       </form>
     </div>
     <script type="module" src="app.js"></script>
