--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="section">
           <label for="image">Url da imagem:</label>
-          <input type="text" id="image" required />
+          <input type="text" id="image" />
         </div>
         <div class="section">
           <label for="author">Colaborador:</label>
