--- a/add.html
+++ b/add.html
@@ -49,8 +49,10 @@
           <label for="author">Colaborador:</label>
           <input type="text" id="author" required />
         </div>
-
-        <button type="submit">Adicionar</button>
+        <div class="btnHolder2">
+          <button type="submit">Adicionar</button>
+          <a class="back" href="./index.html">voltar</a>
+        </div>
       </form>
     </div>
     <script type="module" src="add.js"></script>
