--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
 
       <div class="btnHolder">
-           <a href="./add.html" class="addpage">Voltar</a>
+           <a href="https://digital-transformation-alpha.vercel.app/index.html" class="addpage">Voltar</a>
         <a href="./add.html" class="addpage">+ Adicionar doce</a>
       </div>
       <div class="entries"></div>
